Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I8b31bb16c8e1a7dead3d302b15db20d7a4031bfe

--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -4136,7 +4136,7 @@
     <string name="zen_mode_bypassing_apps_some_summary" msgid="1514572070650411509">"কিছু বিজ্ঞপ্তি"</string>
     <string name="zen_mode_bypassing_app_channels_header" msgid="4011017798712587373">"যে বিজ্ঞপ্তিগুলি \'বিরক্ত করবে না\' মোড এড়িয়ে নিজের কাজ করতে পারে"</string>
     <string name="zen_mode_bypassing_app_channels_toggle_all" msgid="1449462656358219116">"সব বিজ্ঞপ্তিকে অনুমতি দিন"</string>
-    <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{কিছুই বাধা দিতে পারবে না}=1{{sound_category_1} বাধা দিতে পারবে}=2{{sound_category_1} ও {sound_category_2} বাধা দিতে পারবে}=3{{sound_category_1}, {sound_category_2} ও {sound_category_3} বাধা দিতে পারবে}one{{sound_category_1}, {sound_category_2}, ও #টি অ্যাপ বাধা দিতে পারবে}other{{sound_category_1}, {sound_category_2}, ও #টি অ্যাপ বাধা দিতে পারবে}}"</string>
+    <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{কিছুই বাধা দিতে পারবে না}=1{{sound_category_1} বাধা দিতে পারবে}=2{{sound_category_1} ও {sound_category_2} বাধা দিতে পারবে}=3{{sound_category_1}, {sound_category_2} ও {sound_category_3} বাধা দিতে পারবে}one{{sound_category_1}, {sound_category_2} ও আরও #টি অ্যাপ বাধা দিতে পারবে}other{{sound_category_1}, {sound_category_2}, ও আরও #টি অ্যাপ বাধা দিতে পারবে}}"</string>
     <string name="zen_mode_sounds_none" msgid="6557474361948269420">"কেউ বাধা দিতে পারবে না"</string>
     <string name="zen_mode_people_none" msgid="4613147461974255046">"কেউই বাধা দিতে পারবে না"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"কিছু লোকজন বাধা দিতে পারবে"</string>
@@ -4181,7 +4181,7 @@
     <string name="suggestion_button_close" msgid="6865170855573283759">"বন্ধ করুন"</string>
     <string name="device_feedback" msgid="5351614458411688608">"এই ডিভাইসের সম্পর্কে মতামত পাঠান"</string>
     <string name="restr_pin_enter_admin_pin" msgid="4435410646541671918">"প্রশাসকের পিন লিখুন"</string>
-    <string name="switch_on_text" msgid="5664542327776075105">"চালু করুন"</string>
+    <string name="switch_on_text" msgid="5664542327776075105">"চালু আছে"</string>
     <string name="switch_off_text" msgid="1315547447393646667">"বন্ধ আছে"</string>
     <string name="nfc_setting_on" msgid="7701896496026725772">"চালু আছে"</string>
     <string name="nfc_setting_off" msgid="7142103438532732309">"বন্ধ আছে"</string>
