--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -52,7 +52,7 @@
     <string name="font_size_summary" msgid="1296835853522566260">"Aumenta o disminuye el tamaño del texto de la pantalla."</string>
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Reducir el tamaño"</string>
     <string name="font_size_make_larger_desc" msgid="5583046033381722247">"Aumentar el tamaño"</string>
-    <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"Girar automáticamente"</string>
+    <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"Usar giro automático"</string>
     <string name="smart_rotate_text_headline" msgid="436277795183609578">"Detección de caras usa la cámara frontal para mejorar la precisión de Girar automáticamente. Las imágenes nunca se almacenan ni se envían a Google."</string>
     <string name="font_size_preview_text_headline" msgid="1173103737980511652">"Texto de ejemplo"</string>
     <string name="font_size_preview_text_title" msgid="6363561029914452382">"El maravilloso mago de Oz"</string>
@@ -1255,7 +1255,7 @@
     <string name="notification_sound_title" msgid="8747567935870133157">"Sonido de notificación predeterminado"</string>
     <string name="incoming_call_volume_title" msgid="8445408274513654261">"Tono"</string>
     <string name="notification_volume_title" msgid="328053763590888609">"Notificación"</string>
-    <string name="checkbox_notification_same_as_incoming_call" msgid="1798481722572489141">"Utilizar volumen de llamada entrante para notificaciones"</string>
+    <string name="checkbox_notification_same_as_incoming_call" msgid="1798481722572489141">"Usar volumen de llamada entrante para notificaciones"</string>
     <string name="home_work_profile_not_supported" msgid="2605589489324241338">"No admite perfiles de trabajo"</string>
     <string name="notification_sound_dialog_title" msgid="7431891669251806266">"Sonido de notificación predeterminado"</string>
     <string name="media_volume_title" msgid="5209147840160985178">"Multimedia"</string>
@@ -3603,8 +3603,8 @@
     <string name="sound_settings_example_summary" msgid="8125110691864707925">"El volumen del tono de llamada y de las notificaciones está al 80 %"</string>
     <string name="media_volume_option_title" msgid="5966569685119475630">"Volumen de multimedia"</string>
     <string name="remote_media_volume_option_title" msgid="8760846743943305764">"Volumen de envío"</string>
-    <string name="call_volume_option_title" msgid="1461105986437268924">"Volumen de llamada"</string>
-    <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volumen de alarma"</string>
+    <string name="call_volume_option_title" msgid="1461105986437268924">"Volumen de llamadas"</string>
+    <string name="alarm_volume_option_title" msgid="6398641749273697140">"Volumen de alarmas"</string>
     <string name="ring_volume_option_title" msgid="1520802026403038560">"Volumen de tonos y notificaciones"</string>
     <string name="notification_volume_option_title" msgid="4838818791683615978">"Volumen de notificaciones"</string>
     <string name="ringtone_title" msgid="3271453110387368088">"Tono de llamada del teléfono"</string>
@@ -3618,7 +3618,7 @@
     <string name="vibrate_when_ringing_option_always_vibrate" msgid="968652667232075466">"Vibrar siempre"</string>
     <string name="vibrate_when_ringing_option_ramping_ringer" msgid="2798848945803840348">"Vibrar primero y sonar cada vez más alto"</string>
     <string name="other_sound_settings" msgid="5468360269346162072">"Otros sonidos"</string>
-    <string name="dial_pad_tones_title" msgid="3536945335367914892">"Tonos del teclado"</string>
+    <string name="dial_pad_tones_title" msgid="3536945335367914892">"Tonos del teclado telefónico"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"Sonido de bloqueo de pantalla"</string>
     <string name="charging_sounds_title" msgid="5261683808537783668">"Vibración y sonidos de carga"</string>
     <string name="docking_sounds_title" msgid="5341616179210436159">"Sonidos al conectar"</string>
@@ -3639,7 +3639,7 @@
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Recibe notificaciones solo de personas y aplicaciones importantes"</string>
     <string name="zen_mode_slice_subtitle" msgid="6849372107272604160">"Limitar interrupciones"</string>
     <string name="zen_mode_settings_turn_on_dialog_title" msgid="7500702838426404527">"Activar el modo No molestar"</string>
-    <string name="zen_mode_behavior_alarms_only" msgid="2956938533859578315">"Pueden interrumpirte alarmas y sonidos multimedia"</string>
+    <string name="zen_mode_behavior_alarms_only" msgid="2956938533859578315">"Las alarmas y los sonidos multimedia pueden interrumpirte"</string>
     <string name="zen_mode_automation_settings_title" msgid="3709324184191870926">"Programaciones"</string>
     <string name="zen_mode_delete_automatic_rules" msgid="5020468289267191765">"Eliminar programaciones"</string>
     <string name="zen_mode_schedule_delete" msgid="5383420576833765114">"Eliminar"</string>
@@ -4110,7 +4110,7 @@
     <string name="zen_mode_media_list" msgid="2006413476596092020">"multimedia"</string>
     <string name="zen_mode_media_list_first" msgid="7824427062528618442">"Multimedia"</string>
     <string name="zen_mode_system" msgid="7301665021634204942">"Sonidos al tocar"</string>
-    <string name="zen_mode_system_summary" msgid="7225581762792177522">"Sonidos del teclado y de otros botones"</string>
+    <string name="zen_mode_system_summary" msgid="7225581762792177522">"Sonidos del teclado y otros botones"</string>
     <string name="zen_mode_system_list" msgid="2256218792042306434">"sonidos al tocar"</string>
     <string name="zen_mode_system_list_first" msgid="8590078626001067855">"Sonidos al tocar"</string>
     <string name="zen_mode_reminders" msgid="1970224691551417906">"Recordatorios"</string>
@@ -4118,7 +4118,7 @@
     <string name="zen_mode_reminders_list" msgid="3133513621980999858">"recordatorios"</string>
     <string name="zen_mode_reminders_list_first" msgid="1130470396012190814">"Recordatorios"</string>
     <string name="zen_mode_events" msgid="7425795679353531794">"Eventos de calendario"</string>
-    <string name="zen_mode_events_summary" msgid="3241903481309766428">"De eventos futuros del calendario"</string>
+    <string name="zen_mode_events_summary" msgid="3241903481309766428">"De próximos eventos del calendario"</string>
     <string name="zen_mode_events_list" msgid="7191316245742097229">"eventos"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Eventos"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Permitir que las aplicaciones anulen el modo No molestar"</string>
@@ -4137,7 +4137,7 @@
     <string name="zen_mode_bypassing_app_channels_header" msgid="4011017798712587373">"Notificaciones que pueden interrumpirte"</string>
     <string name="zen_mode_bypassing_app_channels_toggle_all" msgid="1449462656358219116">"Permitir todas las notificaciones"</string>
     <string name="zen_mode_other_sounds_summary" msgid="8784400697494837032">"{count,plural,offset:2 =0{Nada puede interrumpirte}=1{{sound_category_1} puede interrumpirte}=2{{sound_category_1} y {sound_category_2} pueden interrumpirte}=3{{sound_category_1}, {sound_category_2} y {sound_category_3} pueden interrumpirte}other{{sound_category_1}, {sound_category_2} y # más pueden interrumpirte}}"</string>
-    <string name="zen_mode_sounds_none" msgid="6557474361948269420">"Nada puede interrumpirte"</string>
+    <string name="zen_mode_sounds_none" msgid="6557474361948269420">"Nada puede interrumpirme"</string>
     <string name="zen_mode_people_none" msgid="4613147461974255046">"Nadie puede interrumpirte"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"Algunas personas pueden interrumpirte"</string>
     <string name="zen_mode_people_all" msgid="311036110283015205">"Todo el mundo puede interrumpirte"</string>
@@ -4150,7 +4150,7 @@
     <!-- no translation found for zen_mode_calls_summary_one (1928015516061784276) -->
     <skip />
     <string name="zen_mode_calls_summary_two" msgid="6351563496898410742">"<xliff:g id="CALLER_TYPE_0">%1$s</xliff:g> y <xliff:g id="CALLER_TYPE_1">%2$s</xliff:g>"</string>
-    <string name="zen_mode_repeat_callers_summary" msgid="4121054819936083025">"Si es la segunda llamada de una misma persona y la primera fue hace menos de <xliff:g id="MINUTES">%d</xliff:g> minutos"</string>
+    <string name="zen_mode_repeat_callers_summary" msgid="4121054819936083025">"Si la misma persona llama por segunda vez en un periodo de <xliff:g id="MINUTES">%d</xliff:g> minutos"</string>
     <string name="zen_mode_behavior_summary_custom" msgid="3126805555852783860">"Personalizado"</string>
     <string name="zen_mode_when" msgid="5710214762051824755">"Activar automáticamente"</string>
     <string name="zen_mode_when_never" msgid="2537537280091840672">"Nunca"</string>
@@ -4158,7 +4158,7 @@
     <string name="zen_mode_when_weeknights" msgid="531342225633264368">"Noches entre semana"</string>
     <string name="zen_mode_start_time" msgid="1252665038977523332">"Hora de inicio"</string>
     <string name="zen_mode_end_time" msgid="223502560367331706">"Hora de finalización"</string>
-    <string name="zen_mode_end_time_next_day_summary_format" msgid="419683704068360804">"Día siguiente a las <xliff:g id="FORMATTED_TIME">%s</xliff:g>"</string>
+    <string name="zen_mode_end_time_next_day_summary_format" msgid="419683704068360804">"<xliff:g id="FORMATTED_TIME">%s</xliff:g> del día siguiente"</string>
     <string name="zen_mode_summary_alarms_only_indefinite" msgid="910047326128154945">"Cambiar a Solo alarmas de forma indefinida"</string>
     <plurals name="zen_mode_summary_alarms_only_by_minute" formatted="false" msgid="1900512966361163390">
       <item quantity="other">Cambiar para ver solo alarmas durante <xliff:g id="DURATION">%1$d</xliff:g> minutos (hasta las <xliff:g id="FORMATTEDTIME_1">%2$s</xliff:g>)</item>
@@ -4849,14 +4849,14 @@
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"Mostrar notificaciones"</string>
     <string name="one_handed_action_show_notification_summary" msgid="8281689861222000436">"Aparecerán notificaciones y ajustes."</string>
     <string name="ambient_display_summary" msgid="2650326740502690434">"Toca la pantalla dos veces para consultar la hora, las notificaciones y otra información."</string>
-    <string name="ambient_display_pickup_title" product="default" msgid="4418310591912877548">"Levantar el teléfono para consultarlo"</string>
+    <string name="ambient_display_pickup_title" product="default" msgid="4418310591912877548">"Levantar teléfono para consultarlo"</string>
     <string name="ambient_display_pickup_title" product="tablet" msgid="8055486872070888377">"Levantar el tablet para comprobar las notificaciones"</string>
     <string name="ambient_display_pickup_title" product="device" msgid="8980156994848721455">"Levantar el dispositivo para comprobar las notificaciones"</string>
     <string name="ambient_display_wake_screen_title" msgid="7637678749035378085">"Activar pantalla"</string>
     <string name="ambient_display_pickup_summary" product="default" msgid="1087355013674109242">"Coge el teléfono para consultar la hora, las notificaciones y otra información."</string>
     <string name="ambient_display_pickup_summary" product="tablet" msgid="2589556997034530529">"Coge el tablet para consultar la hora, las notificaciones y otra información."</string>
     <string name="ambient_display_pickup_summary" product="device" msgid="1916011370011115627">"Coge el dispositivo para consultar la hora, las notificaciones y otra información."</string>
-    <string name="ambient_display_tap_screen_title" product="default" msgid="2811332293938467179">"Tocar para consultar el teléfono"</string>
+    <string name="ambient_display_tap_screen_title" product="default" msgid="2811332293938467179">"Tocar teléfono para consultarlo"</string>
     <string name="ambient_display_tap_screen_title" product="tablet" msgid="6461531447715370632">"Toca para comprobar el tablet"</string>
     <string name="ambient_display_tap_screen_title" product="device" msgid="4423803387551153840">"Toca para comprobar el dispositivo"</string>
     <string name="ambient_display_tap_screen_summary" msgid="4480489179996521405">"Toca la pantalla para consultar la hora, las notificaciones y otra información."</string>
@@ -5419,7 +5419,7 @@
     <string name="overlay_settings_summary" msgid="2745336273786148166">"Permite que las aplicaciones que se muestran sobre otras se superpongan en pantallas de ajustes"</string>
     <string name="media_controls_title" msgid="403271085636252597">"Multimedia"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Fijar reproductor multimedia"</string>
-    <string name="media_controls_resume_description" msgid="3163482266454802097">"Para que puedas seguir rápidamente por donde lo habías dejado, el reproductor multimedia se queda abierto en los ajustes rápidos"</string>
+    <string name="media_controls_resume_description" msgid="3163482266454802097">"Para seguir rápidamente por donde lo habías dejado, el reproductor multimedia se queda abierto en los ajustes rápidos"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Mostrar recomendaciones de contenido multimedia"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Según tu actividad"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Ocultar reproductor"</string>
