--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -4084,11 +4084,11 @@
     <string name="zen_mode_starred_contacts_title" msgid="630299631659575589">"સ્ટાર આપેલા સંપર્કો"</string>
     <string name="zen_mode_starred_contacts_summary_contacts" msgid="1629467178444895094">"{count,plural,offset:2 =0{એકપણ નહીં}=1{{contact_1}}=2{{contact_1} અને {contact_2}}=3{{contact_1}, {contact_2} અને {contact_3}}one{{contact_1}, {contact_2} અને # અન્ય વ્યક્તિ}other{{contact_1}, {contact_2} અને # અન્ય લોકો}}"</string>
     <string name="zen_mode_starred_contacts_empty_name" msgid="2906404745550293688">"(નામ નથી)"</string>
-    <string name="zen_mode_messages" msgid="7315084748885170585">"સંદેશા"</string>
-    <string name="zen_mode_messages_list" msgid="5431014101342361882">"સંદેશા"</string>
-    <string name="zen_mode_messages_title" msgid="1777598523485334405">"સંદેશા"</string>
-    <string name="zen_mode_messages_header" msgid="253721635061451577">"વિક્ષેપ ઊભો કરી શકે તેવા સંદેશા"</string>
-    <string name="zen_mode_messages_footer" msgid="6002468050854126331">"જે સંદેશાની મંજૂરી આપી હોય તેમાં સાઉન્ડ આવે તેની ખાતરી કરવા માટે, ડિવાઇસ રિંગ વાગે તેમ સેટ કરેલું હોવાનું ચેક કરો"</string>
+    <string name="zen_mode_messages" msgid="7315084748885170585">"મેસેજ"</string>
+    <string name="zen_mode_messages_list" msgid="5431014101342361882">"મેસેજ"</string>
+    <string name="zen_mode_messages_title" msgid="1777598523485334405">"મેસેજ"</string>
+    <string name="zen_mode_messages_header" msgid="253721635061451577">"વિક્ષેપ ઊભો કરી શકે તેવા મેસેજ"</string>
+    <string name="zen_mode_messages_footer" msgid="6002468050854126331">"જે મેસેજની મંજૂરી આપી હોય તેમાં સાઉન્ડ આવે તેની ખાતરી કરવા માટે, ડિવાઇસ રિંગ વાગે તેમ સેટ કરેલું હોવાનું ચેક કરો"</string>
     <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"‘<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>’ માટે આવનારા સંદેશા બ્લૉક કરેલા છે. તમારા મિત્રો, પરિવારજનો અથવા અન્ય સંપર્કો તમારો સંપર્ક કરી શકે તે માટે તમે સેટિંગને અનુકૂળ કરી શકો છો."</string>
     <string name="zen_mode_all_messages_summary" msgid="3756267858343104554">"બધા સંદેશા તમને પ્રાપ્ત થઈ શકે છે"</string>
     <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"બધા કૉલ તમારા પર આવી શકે છે"</string>
@@ -4751,7 +4751,7 @@
     <string name="notification_suggestion_title" msgid="6309263655965785411">"લૉક સ્ક્રીન પરની માહિતી નિયંત્રિત કરો"</string>
     <string name="notification_suggestion_summary" msgid="7615611244249276113">"નોટિફિકેશન કન્ટેન્ટ બતાવો અથવા છુપાવો"</string>
     <string name="page_tab_title_summary" msgid="7188875610123234454">"તમામ"</string>
-    <string name="page_tab_title_support" msgid="3235725053332345773">"ટિપ અને સહાય"</string>
+    <string name="page_tab_title_support" msgid="3235725053332345773">"ટિપ અને સપોર્ટ"</string>
     <string name="developer_smallest_width" msgid="632354817870920911">"સૌથી નાની પહોળાઈ"</string>
     <string name="premium_sms_none" msgid="8737045049886416739">"કોઈ ઇન્સ્ટૉલ કરેલ ઍપએ પ્રીમિયમ SMS ઍક્સેસની વિનંતી કરી નથી"</string>
     <string name="premium_sms_warning" msgid="2192300872411073324">"તમને પ્રીમિયમ SMS નો શુલ્ક લાગી શકે છે અને તમારા કૅરિઅર બિલ્સમાં ઉમેરવામાં આવશે. જો તમે કોઇ ઍપ્લિકેશન માટે પરવાનગી સક્ષમ કરો, તો તમે તે ઍપ્લિકેશનનો ઉપયોગ કરીને પ્રીમિયમ SMS મોકલવા માટે સમર્થ હશો."</string>
