--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -1391,7 +1391,7 @@
     <string name="night_display_temperature_title" msgid="857248782470764263">"Intenzitet"</string>
     <string name="night_display_summary_off_auto_mode_never" msgid="7406899634169354142">"Nikad se ne uključuje automatski"</string>
     <string name="night_display_summary_off_auto_mode_custom" msgid="6667008039080687931">"Uključuje se automatski u <xliff:g id="ID_1">%1$s</xliff:g>"</string>
-    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Uključuje se automatski kad sunce zađe"</string>
+    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Uključuje se automatski kad zađe sunce"</string>
     <string name="night_display_summary_on_auto_mode_never" msgid="832333009202889350">"Nikad se ne isključuje automatski"</string>
     <string name="night_display_summary_on_auto_mode_custom" msgid="2096677025343425755">"Isključuje se automatski u <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_summary_on_auto_mode_twilight" msgid="8070517472000680361">"Isključuje se automatski kad sunce izađe"</string>
@@ -1402,7 +1402,7 @@
     <string name="night_display_activation_on_custom" msgid="4951143503599226846">"Uključi do <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_activation_off_custom" msgid="79965738861100371">"Isključi do <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_not_currently_on" msgid="6600205753103093827">"Noćno svjetlo nije uključeno"</string>
-    <string name="twilight_mode_location_off_dialog_message" msgid="4559150893687124801">"Lokacija uređaja potrebna je da bi se odredilo vrijeme zalaska i izlaska sunca kod vas."</string>
+    <string name="twilight_mode_location_off_dialog_message" msgid="4559150893687124801">"Lokacija uređaja potrebna je da bi se odredilo vrijeme zalaska i izlaska sunca."</string>
     <string name="twilight_mode_launch_location" msgid="7799112373591153956">"Postavke lokacije"</string>
     <string name="dark_ui_activation_on_manual" msgid="1541006734577325234">"Odmah uključi"</string>
     <string name="dark_ui_activation_off_manual" msgid="2395333709291250065">"Odmah isključi"</string>
@@ -1415,7 +1415,7 @@
     <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Uključi u prilagođeno vrijeme"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"Status"</string>
     <string name="dark_ui_summary_off_auto_mode_never" msgid="5828281549475697398">"Nikad se ne uključuje automatski"</string>
-    <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Uključuje se automatski kad sunce zađe"</string>
+    <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Uključuje se automatski kad zađe sunce"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Uključuje se automatski u <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Nikad se ne isključuje automatski"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Isključuje se automatski kad sunce izađe"</string>
@@ -1425,7 +1425,7 @@
     <string name="dark_ui_text" msgid="4392646155331126666">"Tamna tema upotrebljava crnu pozadinu radi produljenja trajanja baterije na nekim zaslonima. Rasporedi s tamnom temom čekaju s uključivanjem dok se zaslon ne isključi."</string>
     <string name="screen_timeout" msgid="7709947617767439410">"Automatsko isključivanje zaslona"</string>
     <string name="screen_timeout_title" msgid="785134393520893049">"Zaslon se isključuje"</string>
-    <string name="screen_timeout_summary" msgid="5558778019594643427">"Kada prođe <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> neaktivnosti"</string>
+    <string name="screen_timeout_summary" msgid="5558778019594643427">"Nakon <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> neaktivnosti"</string>
     <string name="wallpaper_settings_title" msgid="5635129851136006383">"Pozadinska slika"</string>
     <string name="style_and_wallpaper_settings_title" msgid="2232042809407308946">"Pozadina i stil"</string>
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Početni zaslon, zaključan zaslon"</string>
@@ -5595,7 +5595,7 @@
     <string name="multiple_users_main_switch_title" msgid="2759849884417772712">"Upotreba većeg broja korisnika"</string>
     <string name="wireless_debugging_main_switch_title" msgid="8463499572781441719">"Upotreba bežičnog otklanjanja pogrešaka"</string>
     <string name="graphics_driver_main_switch_title" msgid="6125172901855813790">"Upotreba preferencija upravlj. programa za grafiku"</string>
-    <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Upotrijebi Štednju baterije"</string>
+    <string name="battery_saver_main_switch_title" msgid="5072135547489779352">"Uključi štednju baterije"</string>
     <string name="do_not_disturb_main_switch_title_on" msgid="6965566556539821313">"Isključi odmah"</string>
     <string name="do_not_disturb_main_switch_title_off" msgid="7088088515823752545">"Uključi odmah"</string>
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Upotreba noćnog svjetla"</string>
