--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -2430,10 +2430,10 @@
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Kraće"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Duže"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Trajanje automatskog klika"</string>
-    <string name="accessibility_vibration_settings_title" msgid="5198184603753129450">"Vibracije i jačina dodira"</string>
+    <string name="accessibility_vibration_settings_title" msgid="5198184603753129450">"Vibracije i jačina taktilnog odziva"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Vibriranje obaveštenja"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Vibriranje zvona"</string>
-    <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Dodirne povratne informacije"</string>
+    <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Taktilni odziv"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Koristi aplikaciju <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Otvorite aplikaciju <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Koristi korekciju boja"</string>
@@ -2479,8 +2479,8 @@
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Dodatno zatamni ekran"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Zatamnite ekran više od minimalne osvetljenosti telefona"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Zatamnite ekran više od minimalne osvetljenosti tableta"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="1061317523242240222">"Zatamnite ekran da bi vam čitanje bilo prijatnije.&lt;br/&gt;&lt;br/&gt; To može da vam bude korisno: &lt;ol&gt; &lt;li&gt; kada je podrazumevana minimalna osvetljenost telefona i dalje jaka&lt;/li&gt; &lt;li&gt; kada koristite telefon u mraku, na primer, noću ili u tamnoj sobi pre odlaska na spavanje&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="7839714100830254580">"Zatamnite ekran da bi vam čitanje bilo prijatnije.&lt;br/&gt;&lt;br/&gt; To može da vam bude korisno: &lt;ol&gt; &lt;li&gt; kada je podrazumevana minimalna osvetljenost tableta i dalje jaka&lt;/li&gt; &lt;li&gt; kada koristite tablet u mraku, na primer, noću ili u tamno sobi pre odlaska na spavanje&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="1061317523242240222">"Zatamnite ekran da bi vam čitanje bilo prijatnije.&lt;br/&gt;&lt;br/&gt; To može da vam bude korisno: &lt;ol&gt; &lt;li&gt; Kada je podrazumevana minimalna osvetljenost telefona i dalje jaka&lt;/li&gt; &lt;li&gt; Kada koristite telefon u mraku, na primer,  noću ili u tamnoj sobi pre odlaska na spavanje&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="7839714100830254580">"Zatamnite ekran da bi vam čitanje bilo prijatnije.&lt;br/&gt;&lt;br/&gt; To može da vam bude korisno: &lt;ol&gt; &lt;li&gt; Kada je podrazumevana minimalna osvetljenost tableta i dalje jaka&lt;/li&gt; &lt;li&gt; Kada koristite tablet u mraku, na primer, noću ili u tamno sobi pre odlaska na spavanje&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Intenzitet"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"Tamnije"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"Svetlije"</string>
@@ -3632,9 +3632,9 @@
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"plaćanje, podrazumevano"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"dolazno obaveštenje"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"usb privezivanje, bluetooth privezivanje, wi-fi hotspot"</string>
-    <string name="keywords_touch_vibration" msgid="1125291201902251273">"dodirne povratne informacije, vibracija, ekran, osetljivost"</string>
-    <string name="keywords_ring_vibration" msgid="1736301626537417541">"dodirne povratne informacije, vibriranje, telefon, poziv, osetljivost, zvono"</string>
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"dodirne povratne informacije, vibriranje, osetljivost"</string>
+    <string name="keywords_touch_vibration" msgid="1125291201902251273">"taktilni odzivi, vibracija, ekran, osetljivost"</string>
+    <string name="keywords_ring_vibration" msgid="1736301626537417541">"taktilni odzivi, vibriranje, telefon, poziv, osetljivost, zvono"</string>
+    <string name="keywords_notification_vibration" msgid="9162262178415439951">"taktilni odzivi, vibriranje, osetljivost"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"ušteda baterije, lepljivo, trajno, ušteda energije, baterija"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"rutina, raspored, ušteda baterije, ušteda energije, baterija, automatsko, procenat"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, napredno pozivanje, 4g pozivanje"</string>
@@ -3669,7 +3669,7 @@
     <string name="docking_sounds_title" msgid="5341616179210436159">"Zvukovi montiranja"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Zvukovi pri dodiru"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Vibracija pri dodiru"</string>
-    <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Dodirne povratne informacije za dodir, tastaturu i još toga"</string>
+    <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Taktilni odziv za dodir, tastaturu i još toga"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Reprodukuje bazna stanica"</string>
     <string name="dock_audio_media_disabled" msgid="8499927008999532341">"Svi zvukovi"</string>
     <string name="dock_audio_media_enabled" msgid="4039126523653131281">"Samo medijski zvukovi"</string>
@@ -3705,7 +3705,7 @@
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Bez zvučnog signala za obaveštenja"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Videćete obaveštenja na ekranu"</string>
     <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"Telefon neće emitovati zvuk ni vibrirati kada stignu obaveštenja."</string>
-    <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Bez zvučnog signala ili vizuelnog obaveštenja"</string>
+    <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Bez vizuelnog i zvučnog signala obaveštenja"</string>
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"Nećete videti niti čuti obaveštenja"</string>
     <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"U slučaju novih ili postojećih obaveštenja, telefon ih neće prikazivati, niti će vibrirati ili zvoniti. Imajte u vidu da će se važna obaveštenja o aktivnostima i statusu telefona i dalje prikazivati.\n\nKada isključite režim Ne uznemiravaj, propuštena obaveštenja možete da pronađete ako prevučete nadole sa vrha ekrana."</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Prilagođeno"</string>
@@ -3713,7 +3713,7 @@
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Ukloni prilagođeno podešavanje"</string>
     <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"Bez zvučnog signala za obaveštenja"</string>
     <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"Delimično skriveno"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Bez zvučnog signala ili vizuelnog obaveštenja"</string>
+    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Bez vizuelnog i zvučnog signala obaveštenja"</string>
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"Prilagođena ograničenja"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"Kada je ekran uključen"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"Kada je ekran isključen"</string>
@@ -3770,7 +3770,7 @@
     <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Kada je uključen režim Ne uznemiravaj, zvukovi obaveštenja za poruke, podsetnike i događaje će biti isključeni, osim za stavke koje ste dozvolili iznad. Možete da prilagodite podešavanja i dozvolite prijateljima, članovima porodice ili drugim kontaktima da dopru do vas."</string>
     <string name="zen_onboarding_ok" msgid="8764248406533833392">"Gotovo"</string>
     <string name="zen_onboarding_settings" msgid="2815839576245114342">"Podešavanja"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Bez zvučnog signala ili vizuelnog obaveštenja"</string>
+    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Bez vizuelnog i zvučnog signala obaveštenja"</string>
     <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Bez zvučnog signala za obaveštenja"</string>
     <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Nećete videti niti čuti obaveštenja. Pozivi od kontakata sa zvezdicom i ponovnih pozivalaca su dozvoljeni."</string>
     <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(trenutno podešavanje)"</string>
@@ -4116,7 +4116,7 @@
     <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Raspored se isključuje kada alarm zazvoni"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"Ponašanje režima Ne uznemiravaj"</string>
     <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Koristi podrazumevana podešavanja"</string>
-    <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Napravite prilagođena podešavanja za ovaj raspored"</string>
+    <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Napravi prilagođena podešavanja za ovaj raspored"</string>
     <string name="zen_mode_custom_behavior_category_title" msgid="7815612569425733764">"Za „<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>“"</string>
     <string name="summary_divider_text" msgid="8836285171484563986">", "</string>
     <string name="summary_range_symbol_combination" msgid="8447490077794415525">"<xliff:g id="START">%1$s</xliff:g>–<xliff:g id="END">%2$s</xliff:g>"</string>
