--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -1371,7 +1371,7 @@
     <string name="night_display_temperature_title" msgid="857248782470764263">"Наситеност"</string>
     <string name="night_display_summary_off_auto_mode_never" msgid="7406899634169354142">"Няма да се включи автоматично"</string>
     <string name="night_display_summary_off_auto_mode_custom" msgid="6667008039080687931">"Ще се включи автоматично в <xliff:g id="ID_1">%1$s</xliff:g>"</string>
-    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Ще се включи автоматично при залез"</string>
+    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Ще се включва автоматично при залез"</string>
     <string name="night_display_summary_on_auto_mode_never" msgid="832333009202889350">"Няма да се изключи автоматично"</string>
     <string name="night_display_summary_on_auto_mode_custom" msgid="2096677025343425755">"Ще се изключи автоматично в <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_summary_on_auto_mode_twilight" msgid="8070517472000680361">"Ще се изключи автоматично при изгрев"</string>
@@ -1515,7 +1515,7 @@
     <string name="status_prl_version" msgid="9002131357502714281">"Версия на списъка с предпочитания за роуминг"</string>
     <string name="meid_multi_sim" msgid="7645394486193991388">"MEID (слот %1$d за SIM карта)"</string>
     <string name="scanning_status_text_on" msgid="3846571210578042940">"Вкл."</string>
-    <string name="scanning_status_text_off" msgid="4002352668313705132">"Изключено"</string>
+    <string name="scanning_status_text_off" msgid="4002352668313705132">"Изкл."</string>
     <string name="scanning_status_text_wifi_on_ble_on" msgid="7644609329607744714">"Сканирането за Wi‑Fi и устройства с Bluetooth е включено"</string>
     <string name="scanning_status_text_wifi_on_ble_off" msgid="7215007787287418186">"Сканирането за Wi-Fi е включено, сканирането за устройства с Bluetooth е изключено"</string>
     <string name="scanning_status_text_wifi_off_ble_on" msgid="1396882599556304165">"Сканирането за устройства с Bluetooth е включено, сканирането за Wi‑Fi е изключено"</string>
@@ -5404,7 +5404,7 @@
     <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"Предотвратяване на звъненето:\nВ менюто за силата на звука е налице пряк път."</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Показване на портфейла"</string>
     <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Разрешаване на достъп до портфейла от заключения екран и от бързите настройки"</string>
-    <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Показване на контролите за устройството"</string>
+    <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Показване на контроли за устройства"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"Достъп до контролите при заключен екран"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
     <string name="rtt_settings_no_visible" msgid="7440356831140948382"></string>
