--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -2706,7 +2706,7 @@
     <string name="smart_battery_manager_title" msgid="3677620516657920364">"Gestor de bateria"</string>
     <string name="smart_battery_title" msgid="9095903608520254254">"Gestiona les aplicacions automàticament"</string>
     <string name="smart_battery_summary" product="default" msgid="1492277404000064998">"Limita l\'ús de bateria de les aplicacions que no utilitzes habitualment"</string>
-    <string name="smart_battery_footer" msgid="8407121907452993645">"Quan el gestor de bateria detecta que hi ha aplicacions que estan esgotant la bateria, t\'ofereix l\'opció de restringir-les. És possible que les aplicacions restringides no funcionin correctament i que en rebis les notificacions amb retard."</string>
+    <string name="smart_battery_footer" msgid="8407121907452993645">"Quan el gestor de bateria detecta que hi ha aplicacions que estan exhaurint la bateria, t\'ofereix l\'opció de restringir-les. És possible que les aplicacions restringides no funcionin correctament i que en rebis les notificacions amb retard."</string>
     <string name="restricted_app_title" msgid="6585080822121007436">"Aplicacions restringides"</string>
     <plurals name="restricted_app_summary" formatted="false" msgid="6059772951505411003">
       <item quantity="other">S\'ha limitat l\'ús de la bateria per a %1$d aplicacions</item>
@@ -2715,8 +2715,8 @@
     <string name="restricted_app_time_summary" msgid="3097721884155913252">"Restringida (<xliff:g id="TIME">%1$s</xliff:g>)"</string>
     <string name="restricted_app_detail_footer" msgid="3495725286882138803">"Aquestes aplicacions tenen restringit l\'ús de la bateria en segon pla. És possible que no funcionin correctament i que en rebis les notificacions amb retard."</string>
     <string name="battery_auto_restriction_title" msgid="827206218118093357">"Utilitza el gestor de bateria"</string>
-    <string name="battery_auto_restriction_summary" msgid="2140896101984815711">"Detecta quan les aplicacions consumeixen bateria"</string>
-    <string name="battery_manager_summary" msgid="255708681438809287">"S\'està detectant el consum de bateria de les aplicacions"</string>
+    <string name="battery_auto_restriction_summary" msgid="2140896101984815711">"Detecta quan les aplicacions exhaureixen la bateria"</string>
+    <string name="battery_manager_summary" msgid="255708681438809287">"Detecta quan les aplicacions exhaureixen la bateria"</string>
     <string name="battery_manager_off" msgid="673547668722420924">"Desactivat"</string>
     <plurals name="battery_manager_app_restricted" formatted="false" msgid="6714534362166394848">
       <item quantity="other">S\'han restringit %1$d aplicacions</item>
@@ -2802,7 +2802,7 @@
     <string name="battery_sugg_apps_settings" msgid="6527223370162382166">"L\'aplicació pot oferir paràmetres per reduir el consum de la bateria"</string>
     <string name="battery_desc_users" msgid="1959428568888686847">"Bateria utilitzada per l\'usuari"</string>
     <string name="battery_desc_unaccounted" msgid="1649497860893660763">"Ús variat de l\'energia"</string>
-    <string name="battery_msg_unaccounted" msgid="5647345548624995064">"El consum de la bateria és l\'ús d\'energia aproximat i no inclou totes les fonts de descàrrega de la bateria. Altres és la diferència entre el consum d\'energia calculat i la descàrrega real que es detecta a la bateria."</string>
+    <string name="battery_msg_unaccounted" msgid="5647345548624995064">"El consum de la bateria és l\'ús d\'energia aproximat i no inclou totes les fonts d\'exhauriment de la bateria. Altres és la diferència entre el consum d\'energia calculat i l\'exhauriment real que es detecta a la bateria."</string>
     <string name="battery_desc_overcounted" msgid="5982079150027267539">"Consum d\'energia comptabilitzat més d\'una vegada"</string>
     <string name="mah" msgid="3604527474433227780">"<xliff:g id="NUMBER">%d</xliff:g> mAh"</string>
     <string name="battery_used_for" msgid="6401552215008504483">"En ús durant <xliff:g id="TIME">^1</xliff:g>"</string>
@@ -4379,14 +4379,14 @@
       <item quantity="one"><xliff:g id="APP">%1$s</xliff:g> s\'està comportant de manera anòmala</item>
     </plurals>
     <plurals name="power_high_usage_title" formatted="false" msgid="8013115866788425817">
-      <item quantity="other">Hi ha aplicacions que estan esgotant la bateria</item>
-      <item quantity="one"><xliff:g id="APP">%1$s</xliff:g> està esgotant la bateria</item>
+      <item quantity="other">Hi ha aplicacions que estan exhaurint la bateria</item>
+      <item quantity="one"><xliff:g id="APP">%1$s</xliff:g> està exhaurint la bateria</item>
     </plurals>
     <string name="high_power_filter_on" msgid="447849271630431531">"Sense optimitzar"</string>
     <string name="high_power_on" msgid="8778058701270819268">"Sense optimitzar"</string>
     <string name="high_power_off" msgid="317000444619279018">"Optimitza l\'ús de la bateria"</string>
     <string name="high_power_system" msgid="3966701453644915787">"L\'optimització de la bateria no està disponible"</string>
-    <string name="high_power_desc" msgid="2753076899835765338">"No s\'aplica l\'optimització de la bateria. És possible que es consumeixi més ràpidament."</string>
+    <string name="high_power_desc" msgid="2753076899835765338">"No s\'aplica l\'optimització de la bateria. És possible que s\'exhaureixi més ràpidament."</string>
     <string name="high_power_prompt_title" msgid="2574478825228409124">"Vols permetre que l\'aplicació s\'executi sempre en segon pla?"</string>
     <string name="high_power_prompt_body" msgid="6460557929559616041">"Si permets que <xliff:g id="APP_NAME">%1$s</xliff:g> s\'executi sempre en segon pla, és possible que disminueixi la durada de la bateria. \n\nPots canviar-ho més tard a Configuració &gt; Aplicacions i notificacions."</string>
     <string name="battery_summary" msgid="2491764359695671207">"<xliff:g id="PERCENTAGE">%1$s</xliff:g> d\'ús des de l\'última càrrega completa"</string>
@@ -4474,7 +4474,7 @@
     <string name="zen_access_revoke_warning_dialog_summary" msgid="8689801842914183595">"Se suprimiran totes les regles del mode No molestis creades per aquesta aplicació."</string>
     <string name="ignore_optimizations_on" msgid="6865583039303804932">"No optimitzis la bateria"</string>
     <string name="ignore_optimizations_off" msgid="9186557038453586295">"Optimitza la bateria"</string>
-    <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"És possible que la bateria es consumeixi més ràpidament. L\'aplicació ja no té restringit l\'ús de la bateria en segon pla."</string>
+    <string name="ignore_optimizations_on_desc" msgid="1280043916460939932">"És possible que la bateria s\'exhaureixi més ràpidament. L\'aplicació ja no té restringit l\'ús de la bateria en segon pla."</string>
     <string name="ignore_optimizations_off_desc" msgid="3324571675983286177">"Es recomana per allargar la bateria"</string>
     <string name="ignore_optimizations_title" msgid="3464172726254542889">"Vols permetre que <xliff:g id="APP">%s</xliff:g> ignori les optimitzacions de la bateria?"</string>
     <string name="app_list_preference_none" msgid="1635406344616653756">"Cap"</string>
