--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1387,7 +1387,7 @@
     <string name="dark_ui_activation_on_auto" msgid="4824339634784765049">"Ενεργοποίηση έως την ανατολή του ηλίου"</string>
     <string name="dark_ui_activation_off_auto" msgid="9136717444658505208">"Απενεργοποίηση έως τη δύση του ηλίου"</string>
     <string name="dark_ui_title" msgid="3373976268671557416">"Λειτουργία χαμηλού φωτισμού"</string>
-    <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Χρονοδιάγραμμα"</string>
+    <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Πρόγραμμα"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Δεν υπάρχει"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Ενεργό από τη δύση ως το πρωι"</string>
     <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Ενεργοποίηση σε προσαρμ. ώρα"</string>
@@ -3591,7 +3591,7 @@
     <string name="keywords_ring_vibration" msgid="1736301626537417541">"απτική, δόνηση, τηλέφωνο, κλήση, ευαισθησία, κουδούνισμα"</string>
     <string name="keywords_notification_vibration" msgid="9162262178415439951">"απτική, δόνηση, ευαισθησία"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"εξοικονόμηση μπαταρίας, σταθερή, μόνιμη, εξοικονόμηση ενέργειας, μπαταρία"</string>
-    <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"ρουτίνα, χρονοδιάγραμμα, εξοικονόμηση μπαταρίας, εξοικονόμηση ενέργειας, μπαταρία, αυτόματα, ποσοστό"</string>
+    <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"ρουτίνα, πρόγραμμα, εξοικονόμηση μπαταρίας, εξοικονόμηση ενέργειας, μπαταρία, αυτόματα, ποσοστό"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, σύνθετες λειτουργίες κλήσης, κλήσεις 4g"</string>
     <string name="keywords_add_language" msgid="1882751300359939436">"προσθήκη γλώσσας, προσθέστε μια γλώσσα"</string>
     <string name="keywords_font_size" msgid="1643198841815006447">"μέγεθος οθόνης, μεγάλη εκτύπωση, μεγάλη γραμματοσειρά, μεγάλο κείμενο, χαμηλή όραση, αύξηση μεγέθους κειμένου, εργαλείο αύξησης μεγέθους γραμματοσειράς, αύξηση μεγέθους γραμματοσειράς"</string>
@@ -3634,7 +3634,7 @@
     <string name="boot_sounds_title" msgid="5033062848948884111">"Ήχοι ενεργοποίησης"</string>
     <string name="live_caption_title" msgid="8617086825712756983">"Ζωντανοί υπότιτλοι"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"Αυτόματοι υπότιτλοι στο μέσο"</string>
-    <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Κανένα}=1{Ορίστηκε ένα χρονοδιάγραμμα.}other{Ορίστηκαν # χρονοδιαγράμματα.}}"</string>
+    <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Κανένα}=1{Ορίστηκε ένα πρόγραμμα.}other{Ορίστηκαν # προγράμματα.}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Μην ενοχλείτε"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Λήψη ειδοποιήσεων μόνο από σημαντικά άτομα και εφαρμογές"</string>
     <string name="zen_mode_slice_subtitle" msgid="6849372107272604160">"Περιορισμός διακοπών"</string>
@@ -3707,7 +3707,7 @@
     <string name="zen_mode_duration_summary_forever" msgid="5551992961329998606">"Μέχρι την απενεργοποίηση"</string>
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{Μία ώρα}other{# ώρες}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{Ένα λεπτό}other{# λεπτά}}"</string>
-    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Ανενεργό}=1{Ανενεργό / Ένα χρονοδιάγραμμα μπορεί να ενεργοποιηθεί αυτόματα.}other{Ανενεργό / # χρονοδιαγράμματα μπορούν να ενεργοποιηθούν αυτόματα.}}"</string>
+    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Ανενεργό}=1{Ανενεργό / Ένα πρόγραμμαμπορεί να ενεργοποιηθεί αυτόματα.}other{Ανενεργό / # προγράμματα μπορούν να ενεργοποιηθούν αυτόματα.}}"</string>
     <string name="zen_category_behavior" msgid="3214056473947178507">"Τι μπορεί να διακόπτει τη λειτουργία Μην ενοχλείτε"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Άτομα"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Εφαρμογές"</string>
@@ -5510,7 +5510,7 @@
     <string name="night_light_main_switch_title" msgid="3428298022467805219">"Χρήση Νυχτερινού φωτισμού"</string>
     <string name="nfc_main_switch_title" msgid="6295839988954817432">"Χρήση NFC"</string>
     <string name="adaptive_battery_main_switch_title" msgid="3127477920505485813">"Χρήση Προσαρμοστικής μπαταρίας"</string>
-    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Χρήση Προσαρμοστική φωτεινότητας"</string>
+    <string name="adaptive_brightness_main_switch_title" msgid="2681666805191642737">"Χρήση προσαρμοστικής φωτεινότητας"</string>
     <string name="wifi_calling_main_switch_title" msgid="4070224008346815634">"Χρήση κλήσης Wi‑Fi"</string>
     <string name="screen_saver_main_switch_title" msgid="256530705774121595">"Χρήση προφύλαξης οθόνης"</string>
     <string name="default_see_all_apps_title" msgid="7481113230662612178">"Εμφάνιση όλων των εφαρμογών"</string>
