--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -55,7 +55,7 @@
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Zmenšiť"</string>
     <string name="font_size_make_larger_desc" msgid="5583046033381722247">"Zväčšiť"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"Používať automatické otáčanie"</string>
-    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Rozpoznávanie tváre zlepšuje presnosť automatického otáčania pomocou predného fotoaparátu. Obrázky sa nikdy neukladajú ani neodosielajú Googlu."</string>
+    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Rozpoznávanie tváre zlepšuje presnosť automatického otáčania pomocou prednej kamery. Obrázky sa nikdy neukladajú ani neodosielajú Googlu."</string>
     <string name="font_size_preview_text_headline" msgid="1173103737980511652">"Ukážka textu"</string>
     <string name="font_size_preview_text_title" msgid="6363561029914452382">"Čarodejník z krajiny Oz"</string>
     <string name="font_size_preview_text_subtitle" msgid="5806349524325544614">"11. kapitola: Nádherné smaragdové mesto"</string>
@@ -1411,7 +1411,7 @@
     <string name="night_display_temperature_title" msgid="857248782470764263">"Intenzita"</string>
     <string name="night_display_summary_off_auto_mode_never" msgid="7406899634169354142">"Nikdy sa automaticky nezapne"</string>
     <string name="night_display_summary_off_auto_mode_custom" msgid="6667008039080687931">"Zapne sa automaticky o <xliff:g id="ID_1">%1$s</xliff:g>"</string>
-    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Zapne sa automaticky pri západe slnka"</string>
+    <string name="night_display_summary_off_auto_mode_twilight" msgid="3669132200611324994">"Zapnúť automaticky pri západe slnka"</string>
     <string name="night_display_summary_on_auto_mode_never" msgid="832333009202889350">"Nikdy sa automaticky nevypne"</string>
     <string name="night_display_summary_on_auto_mode_custom" msgid="2096677025343425755">"Vypne sa automaticky o <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_summary_on_auto_mode_twilight" msgid="8070517472000680361">"Vypne sa automaticky pri východe slnka"</string>
@@ -1435,7 +1435,7 @@
     <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Vo vybranom čase"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"Stav"</string>
     <string name="dark_ui_summary_off_auto_mode_never" msgid="5828281549475697398">"Nikdy sa automaticky nezapne"</string>
-    <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Zapne sa automaticky pri západe slnka"</string>
+    <string name="dark_ui_summary_off_auto_mode_auto" msgid="6766831395970887213">"Zapnúť automaticky pri západe slnka"</string>
     <string name="dark_ui_summary_off_auto_mode_custom" msgid="1345906088326708376">"Zapne sa automaticky o <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="dark_ui_summary_on_auto_mode_never" msgid="2468597062391435521">"Nikdy sa automaticky nevypne"</string>
     <string name="dark_ui_summary_on_auto_mode_auto" msgid="5553376115092648636">"Vypne sa automaticky pri východe slnka"</string>
@@ -1472,7 +1472,7 @@
     <string name="ambient_display_screen_title" msgid="8615947016991429325">"Ambientné zobrazenie"</string>
     <string name="ambient_display_category_triggers" msgid="1216640141609270011">"Kedy zobrazovať"</string>
     <string name="doze_title" msgid="1523090408230862316">"Prebudiť obraz. na upozornenia"</string>
-    <string name="doze_summary" msgid="8252867381522942804">"Keď je obrazovka tmavá, zapne sa v prípade nových upozornení"</string>
+    <string name="doze_summary" msgid="8252867381522942804">"Keď je obrazovka tmavá, pri nových upozorneniach sa zapne"</string>
     <string name="doze_always_on_title" msgid="7326245192352868477">"Vždy zobrazovať čas a údaje"</string>
     <string name="doze_always_on_summary" msgid="509097829739647852">"Zvýšená spotreba batérie"</string>
     <string name="force_bold_text" msgid="4620929631102086716">"Tučný text"</string>
@@ -4168,7 +4168,7 @@
     <string name="zen_mode_schedule_rule_days_none" msgid="5636604196262227070">"Žiadne"</string>
     <string name="zen_mode_schedule_rule_days_all" msgid="1583884351893245169">"Každý deň"</string>
     <string name="zen_mode_schedule_alarm_title" msgid="305237266064819345">"Budík môže prepísať čas ukončenia"</string>
-    <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Plán sa vypne, keď zazvoní budík"</string>
+    <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Vypnúť plán, keď zazvoní budík"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"Správanie režimu bez vyrušení"</string>
     <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Použiť predvolené nastavenia"</string>
     <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Vytvoriť vlastné nastavenia tohto plánu"</string>
@@ -4196,7 +4196,7 @@
     <string name="zen_mode_messages_list" msgid="5431014101342361882">"správy"</string>
     <string name="zen_mode_messages_title" msgid="1777598523485334405">"Správy"</string>
     <string name="zen_mode_messages_header" msgid="253721635061451577">"Správy, ktoré môžu vyrušiť"</string>
-    <string name="zen_mode_messages_footer" msgid="6002468050854126331">"Skontrolujte, či je v zariadení zapnuté zvonenie, aby na povolené správy upozorňovalo zvukom"</string>
+    <string name="zen_mode_messages_footer" msgid="6002468050854126331">"Skontrolujte, či má zariadenie zapnuté zvonenie, aby na povolené správy upozorňovalo zvukom"</string>
     <string name="zen_mode_custom_messages_footer" msgid="7545180036949550830">"Prichádzajúce správy sú v rámci plánu <xliff:g id="SCHEDULE_NAME">%1$s</xliff:g> blokované. Môžete upraviť nastavenia a povoliť priateľom, rodine alebo ďalším kontaktom spojiť sa s vami."</string>
     <string name="zen_mode_all_messages_summary" msgid="3756267858343104554">"Dostanete všetky správy"</string>
     <string name="zen_mode_all_calls_summary" msgid="7337907849083824698">"Dostanete všetky hovory"</string>
@@ -4421,7 +4421,7 @@
     <string name="runtime_permissions_summary_no_permissions_granted" msgid="7456745929035665029">"Neboli udelené žiadne povolenia"</string>
     <string name="runtime_permissions_summary_no_permissions_requested" msgid="7174876170116073356">"Neboli požadované žiadne povolenia"</string>
     <string name="runtime_permissions_summary_control_app_access" msgid="3744591396348990500">"Ovládajte prístup aplikácií k údajom"</string>
-    <string name="permissions_usage_title" msgid="2942741460679049132">"Panel na ochranu súkromia"</string>
+    <string name="permissions_usage_title" msgid="2942741460679049132">"Panel ochrany súkromia"</string>
     <string name="permissions_usage_summary" msgid="6784310472062516454">"Zobraziť, ktoré aplikácie nedávno použili povolenia"</string>
     <string name="unused_apps" msgid="4566272194756830656">"Nepoužívané aplikácie"</string>
     <plurals name="unused_apps_summary" formatted="false" msgid="3827583582750975783">
@@ -5006,14 +5006,14 @@
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"Horná časť obrazovky sa presunie na dosah palca."</string>
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"Zobrazovať upozornenia"</string>
     <string name="one_handed_action_show_notification_summary" msgid="8281689861222000436">"Zobrazia sa upozornenia a nastavenia."</string>
-    <string name="ambient_display_summary" msgid="2650326740502690434">"Ak chcete zistiť čas, skontrolovať upozornenia a získať ďalšie informácie, klepnite dvakrát na obrazovku."</string>
-    <string name="ambient_display_pickup_title" product="default" msgid="4418310591912877548">"Kontrola telefónu zdvihnutím"</string>
+    <string name="ambient_display_summary" msgid="2650326740502690434">"Zobraziť čas, kontrolovať upozornenia a získať ďalšie informácie dvojitým klepnutím na obrazovku"</string>
+    <string name="ambient_display_pickup_title" product="default" msgid="4418310591912877548">"Kontrolovať telefón zdvihnutím"</string>
     <string name="ambient_display_pickup_title" product="tablet" msgid="8055486872070888377">"Tablet skontrolujete tak, že ho zodvihnete"</string>
     <string name="ambient_display_pickup_title" product="device" msgid="8980156994848721455">"Zariadenie skontrolujete tak, že ho zodvihnete"</string>
     <string name="ambient_display_wake_screen_title" msgid="7637678749035378085">"Prebudiť obrazovku"</string>
-    <string name="ambient_display_pickup_summary" product="default" msgid="1087355013674109242">"Ak chcete zistiť čas, skontrolovať upozornenia a získať ďalšie informácie, zdvihnite telefón."</string>
-    <string name="ambient_display_pickup_summary" product="tablet" msgid="2589556997034530529">"Ak chcete zistiť čas, skontrolovať upozornenia a získať ďalšie informácie, zdvihnite tablet."</string>
-    <string name="ambient_display_pickup_summary" product="device" msgid="1916011370011115627">"Ak chcete zistiť čas, skontrolovať upozornenia a získať ďalšie informácie, zdvihnite zariadenie."</string>
+    <string name="ambient_display_pickup_summary" product="default" msgid="1087355013674109242">"Zobraziť čas, kontrolovať upozornenia a získať ďalšie informácie zdvihnutím telefónu"</string>
+    <string name="ambient_display_pickup_summary" product="tablet" msgid="2589556997034530529">"Zobraziť čas, kontrolovať upozornenia a získať ďalšie informácie zdvihnutím tabletu"</string>
+    <string name="ambient_display_pickup_summary" product="device" msgid="1916011370011115627">"Zobraziť čas, kontrolovať upozornenia a získať ďalšie informácie zdvihnutím zariadenia"</string>
     <string name="ambient_display_tap_screen_title" product="default" msgid="2811332293938467179">"Kontrolovať telefón klepnutím"</string>
     <string name="ambient_display_tap_screen_title" product="tablet" msgid="6461531447715370632">"Klepnutím skontrolujete tablet"</string>
     <string name="ambient_display_tap_screen_title" product="device" msgid="4423803387551153840">"Klepnutím skontrolujete zariadenie"</string>
@@ -5581,7 +5581,7 @@
     <string name="power_menu_power_volume_up_hint" msgid="1733051433583045623">"Ponuka vypínača a stavu tiesne:\nnaraz stlačte vypínač a tlačidlo zvýšenia hlasitosti."</string>
     <string name="power_menu_power_prevent_ringing_hint" msgid="5786494894009727654">"Nezvoniť:\nskratka v ponuke hlasitosti."</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Zobraziť peňaženku"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Povoľte prístup k peňaženke z uzamknutej obrazovky a rýchlych nastavení"</string>
+    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Povoliť prístup k peňaženke z uzamknutej obrazovky a rýchlych nastavení"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Zobraziť ovládanie zariadení"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"Prístup k ovládacím prvkom pri uzamknutí"</string>
     <string name="rtt_settings_title" msgid="7049259598645966354"></string>
@@ -5715,7 +5715,7 @@
     <string name="uwb_settings_title" msgid="8578498712312002231">"Ultra-Wideband (UWB)"</string>
     <string name="uwb_settings_summary" msgid="3074271396764672268">"Pomáha zistiť relatívnu pozíciu zariadení v okolí, ktoré majú UWB"</string>
     <string name="uwb_settings_summary_airplane_mode" msgid="1328864888135086484">"Ak chcete používať UWB, vypnite režim v lietadle"</string>
-    <string name="camera_toggle_title" msgid="8952668677727244992">"Prístup k fotoaparátu"</string>
+    <string name="camera_toggle_title" msgid="8952668677727244992">"Prístup ku kamere"</string>
     <string name="mic_toggle_title" msgid="265145278323852547">"Prístup k mikrofónu"</string>
     <string name="sensor_toggle_description" msgid="8248823248606795411">"Pre všetky aplikácie a služby"</string>
     <string name="game_settings_title" msgid="1028178627743422090">"Nastavenia hier"</string>
