--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -2430,10 +2430,10 @@
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Краће"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Дуже"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Трајање аутоматског клика"</string>
-    <string name="accessibility_vibration_settings_title" msgid="5198184603753129450">"Вибрације и јачина додира"</string>
+    <string name="accessibility_vibration_settings_title" msgid="5198184603753129450">"Вибрације и јачина тактилног одзива"</string>
     <string name="accessibility_notification_vibration_title" msgid="6205679908785776478">"Вибрирање обавештења"</string>
     <string name="accessibility_ring_vibration_title" msgid="4689811297654320885">"Вибрирање звона"</string>
-    <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Додирне повратне информације"</string>
+    <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Тактилни одзив"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Користи апликацију <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Отворите апликацију <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Користи корекцију боја"</string>
@@ -2479,8 +2479,8 @@
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Додатно затамни екран"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Затамните екран више од минималне осветљености телефона"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"Затамните екран више од минималне осветљености таблета"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="1061317523242240222">"Затамните екран да би вам читање било пријатније.&lt;br/&gt;&lt;br/&gt; То може да вам буде корисно: &lt;ol&gt; &lt;li&gt; када је подразумевана минимална осветљеност телефона и даље јака&lt;/li&gt; &lt;li&gt; када користите телефон у мраку, на пример, ноћу или у тамној соби пре одласка на спавање&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="7839714100830254580">"Затамните екран да би вам читање било пријатније.&lt;br/&gt;&lt;br/&gt; То може да вам буде корисно: &lt;ol&gt; &lt;li&gt; када је подразумевана минимална осветљеност таблета и даље јака&lt;/li&gt; &lt;li&gt; када користите таблет у мраку, на пример, ноћу или у тамно соби пре одласка на спавање&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="1061317523242240222">"Затамните екран да би вам читање било пријатније.&lt;br/&gt;&lt;br/&gt; То може да вам буде корисно: &lt;ol&gt; &lt;li&gt; Када је подразумевана минимална осветљеност телефона и даље јака&lt;/li&gt; &lt;li&gt; Када користите телефон у мраку, на пример,  ноћу или у тамној соби пре одласка на спавање&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="7839714100830254580">"Затамните екран да би вам читање било пријатније.&lt;br/&gt;&lt;br/&gt; То може да вам буде корисно: &lt;ol&gt; &lt;li&gt; Када је подразумевана минимална осветљеност таблета и даље јака&lt;/li&gt; &lt;li&gt; Када користите таблет у мраку, на пример, ноћу или у тамно соби пре одласка на спавање&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Интензитет"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"Тамније"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"Светлије"</string>
@@ -3632,9 +3632,9 @@
     <string name="keywords_default_payment_app" msgid="5162298193637362104">"плаћање, подразумевано"</string>
     <string name="keywords_ambient_display" msgid="3149287105145443697">"долазно обавештење"</string>
     <string name="keywords_hotspot_tethering" msgid="3688439689671232627">"usb привезивање, bluetooth привезивање, wi-fi хотспот"</string>
-    <string name="keywords_touch_vibration" msgid="1125291201902251273">"додирне повратне информације, вибрација, екран, осетљивост"</string>
-    <string name="keywords_ring_vibration" msgid="1736301626537417541">"додирне повратне информације, вибрирање, телефон, позив, осетљивост, звоно"</string>
-    <string name="keywords_notification_vibration" msgid="9162262178415439951">"додирне повратне информације, вибрирање, осетљивост"</string>
+    <string name="keywords_touch_vibration" msgid="1125291201902251273">"тактилни одзиви, вибрација, екран, осетљивост"</string>
+    <string name="keywords_ring_vibration" msgid="1736301626537417541">"тактилни одзиви, вибрирање, телефон, позив, осетљивост, звоно"</string>
+    <string name="keywords_notification_vibration" msgid="9162262178415439951">"тактилни одзиви, вибрирање, осетљивост"</string>
     <string name="keywords_battery_saver_sticky" msgid="1646191718840975110">"уштеда батерије, лепљиво, трајно, уштеда енергије, батерија"</string>
     <string name="keywords_battery_saver_schedule" msgid="8240483934368455930">"рутина, распоред, уштеда батерије, уштеда енергије, батерија, аутоматско, проценат"</string>
     <string name="keywords_enhance_4g_lte" msgid="658889360486800978">"volte, напредно позивање, 4g позивање"</string>
@@ -3669,7 +3669,7 @@
     <string name="docking_sounds_title" msgid="5341616179210436159">"Звукови монтирања"</string>
     <string name="touch_sounds_title" msgid="2200734041857425078">"Звукови при додиру"</string>
     <string name="vibrate_on_touch_title" msgid="9105544449810547716">"Вибрација при додиру"</string>
-    <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Додирне повратне информације за додир, тастатуру и још тога"</string>
+    <string name="vibrate_on_touch_summary" msgid="664831333409399440">"Тактилни одзив за додир, тастатуру и још тога"</string>
     <string name="dock_audio_media_title" msgid="6474579339356398330">"Репродукује базна станица"</string>
     <string name="dock_audio_media_disabled" msgid="8499927008999532341">"Сви звукови"</string>
     <string name="dock_audio_media_enabled" msgid="4039126523653131281">"Само медијски звукови"</string>
@@ -3705,7 +3705,7 @@
     <string name="zen_mode_restrict_notifications_mute" msgid="6692072837485018287">"Без звучног сигнала за обавештења"</string>
     <string name="zen_mode_restrict_notifications_mute_summary" msgid="966597459849580949">"Видећете обавештења на екрану"</string>
     <string name="zen_mode_restrict_notifications_mute_footer" msgid="2152115038156049608">"Телефон неће емитовати звук ни вибрирати када стигну обавештења."</string>
-    <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Без звучног сигнала или визуелног обавештења"</string>
+    <string name="zen_mode_restrict_notifications_hide" msgid="5997930361607752541">"Без визуелног и звучног сигнала обавештења"</string>
     <string name="zen_mode_restrict_notifications_hide_summary" msgid="6005445725686969583">"Нећете видети нити чути обавештења"</string>
     <string name="zen_mode_restrict_notifications_hide_footer" msgid="4314772315731485747">"У случају нових или постојећих обавештења, телефон их неће приказивати, нити ће вибрирати или звонити. Имајте у виду да ће се важна обавештења о активностима и статусу телефона и даље приказивати.\n\nКада искључите режим Не узнемиравај, пропуштена обавештења можете да пронађете ако превучете надоле са врха екрана."</string>
     <string name="zen_mode_restrict_notifications_custom" msgid="5469078057954463796">"Прилагођено"</string>
@@ -3713,7 +3713,7 @@
     <string name="zen_mode_restrict_notifications_disable_custom" msgid="5062332754972217218">"Уклони прилагођено подешавање"</string>
     <string name="zen_mode_restrict_notifications_summary_muted" msgid="4750213316794189968">"Без звучног сигнала за обавештења"</string>
     <string name="zen_mode_restrict_notifications_summary_custom" msgid="3918461289557316364">"Делимично скривено"</string>
-    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Без звучног сигнала или визуелног обавештења"</string>
+    <string name="zen_mode_restrict_notifications_summary_hidden" msgid="636494600775773296">"Без визуелног и звучног сигнала обавештења"</string>
     <string name="zen_mode_what_to_block_title" msgid="5692710098205334164">"Прилагођена ограничења"</string>
     <string name="zen_mode_block_effects_screen_on" msgid="8780668375194500987">"Када је екран укључен"</string>
     <string name="zen_mode_block_effects_screen_off" msgid="2291988790355612826">"Када је екран искључен"</string>
@@ -3770,7 +3770,7 @@
     <string name="zen_msg_event_reminder_footer" msgid="2700459146293750387">"Када је укључен режим Не узнемиравај, звукови обавештења за поруке, подсетнике и догађаје ће бити искључени, осим за ставке које сте дозволили изнад. Можете да прилагодите подешавања и дозволите пријатељима, члановима породице или другим контактима да допру до вас."</string>
     <string name="zen_onboarding_ok" msgid="8764248406533833392">"Готово"</string>
     <string name="zen_onboarding_settings" msgid="2815839576245114342">"Подешавања"</string>
-    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Без звучног сигнала или визуелног обавештења"</string>
+    <string name="zen_onboarding_new_setting_title" msgid="8813308612916316657">"Без визуелног и звучног сигнала обавештења"</string>
     <string name="zen_onboarding_current_setting_title" msgid="5024603685220407195">"Без звучног сигнала за обавештења"</string>
     <string name="zen_onboarding_new_setting_summary" msgid="7695808354942143707">"Нећете видети нити чути обавештења. Позиви од контаката са звездицом и поновних позивалаца су дозвољени."</string>
     <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(тренутно подешавање)"</string>
@@ -4116,7 +4116,7 @@
     <string name="zen_mode_schedule_alarm_summary" msgid="9162760856136645133">"Распоред се искључује када аларм зазвони"</string>
     <string name="zen_mode_custom_behavior_title" msgid="92525364576358085">"Понашање режима Не узнемиравај"</string>
     <string name="zen_mode_custom_behavior_summary_default" msgid="3259312823717839148">"Користи подразумевана подешавања"</string>
-    <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Направите прилагођена подешавања за овај распоред"</string>
+    <string name="zen_mode_custom_behavior_summary" msgid="5390522750884328843">"Направи прилагођена подешавања за овај распоред"</string>
     <string name="zen_mode_custom_behavior_category_title" msgid="7815612569425733764">"За „<xliff:g id="SCHEDULE_NAME">%1$s</xliff:g>“"</string>
     <string name="summary_divider_text" msgid="8836285171484563986">", "</string>
     <string name="summary_range_symbol_combination" msgid="8447490077794415525">"<xliff:g id="START">%1$s</xliff:g>–<xliff:g id="END">%2$s</xliff:g>"</string>
