--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -1313,7 +1313,7 @@
     <string name="accelerometer_summary_on" product="default" msgid="7117139542131700779">"Ilipat nang awtomatiko ang oryentasyon kapag niro-rotate ang telepono"</string>
     <string name="accelerometer_summary_off" product="tablet" msgid="3747370091309939684">"Awtomatikong ilipat ang oryentasyon kapag iniikot ang tablet"</string>
     <string name="accelerometer_summary_off" product="default" msgid="4451125241783158763">"Ilipat nang awtomatiko ang oryentasyon kapag niro-rotate ang telepono"</string>
-    <string name="brightness" msgid="6216871641021779698">"Antas ng brightness"</string>
+    <string name="brightness" msgid="6216871641021779698">"Level ng brightness"</string>
     <string name="brightness_title" msgid="5457874893085305155">"Brightness"</string>
     <string name="brightness_summary" msgid="6309641759293018049">"Ayusin ang liwanag ng screen"</string>
     <string name="auto_brightness_title" msgid="4239324728760986697">"Adaptive brightness"</string>
